feat: playlist management support (#514)
* add playlist nav page

* create model and service for persistent playlist

rename

* implement base viewmodel

* fix playlistservice

* fix more issues

wip: temp fix PlaylistsPageViewModel

* fix PlaylistService

* create PlaylistViewModel

* Connect playlists page with view models

* wip: create playlist dialog

* support json read and write

* fix XAML files

* fix create playlists dialog style

* using FileIO to write JSON to file

* feat: add PlaylistDetailsPage

* use FileIO to read json from file

* save files to playlist

* move save method into PlaylistViewModel

* rename and delete playlist

* directly bind details page to PlaylistViewModel

* load playlists in the MainPageViewModel

* Add to playlist sub (SongsPage)

* refine playlist grid view to show items count

* create CreatePlaylistCommand to combine dialog and VM logic

* refine AddToPlaylistFlyoutSubmenuBehavior and delete CreatePlaylistCommand

* add "add to playlist" submenu to all relevant pages

* minor clean up

* handle duplicated items in PlaylistViewModel

* localize CreatePlaylistDialog

* more localization

* use commands instead of onclick handlers for playlist rename and delete

* Undo resources VS lint

* add new icon, access key and shortcut to playlist nav item

* add context flyout menu items

* better playlist load error handling

* mark not media not parsable unavailable

* remove subtitle on playlist details page
playlist details doesnt need subtitle. adjust button row animation offset as well

* handle command execution on empty playlists

* adjust some dynamic padding

---------

Co-authored-by: United600 <United600@users.noreply.github.com>

--- a/assets/fonts/ScreenboxMDL2Assets.ufo/glyphs/contents.plist
+++ b/assets/fonts/ScreenboxMDL2Assets.ufo/glyphs/contents.plist
@@ -86,6 +86,8 @@
     <string>uF_006F_.glif</string>
     <key>uF00A4</key>
     <string>uF_00A_4.glif</string>
+    <key>uF00A8</key>
+    <string>uF_00A_8.glif</string>
     <key>uF00B7</key>
     <string>uF_00B_7.glif</string>
     <key>uF00B9</key>
